# clink-tap-platform

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  app.py  config.py  logging_config.py  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/workflows/: auto-assign-pr.yml  ci.yml
docs/: ocsort_tracking_params.md  stabilize_params.md
frontend/: index.html  package-lock.json  vite.config.js
frontend/src/: App.vue  style.css
frontend/src/components/: ContactWidget.vue  JobStatus.vue  UploadForm.vue
processing/: botsort.yaml  csv_postprocess.py  detect.py  detect_obb_only.py  pipeline.py  plot.py  stabilize.py  track.py  tracking.py  tracking_only.py
processing/tools/: check_row_length.py
services/: email_service.py
